# sistema-de-locacao

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.site  ESPECIFICACAO-FUNCIONAL-ERP-LOCADORA.md  INFO-FORMS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  teste.md
.cursor/: mcp.json
alembic/: env.py
app/: __init__.py  main.py
docker/: Dockerfile  entrypoint.sh
e2e/: package.json  playwright.config.ts
scripts/: __init__.py  apply_supabase_migrations.py  check_forms_render.py  e2e_support.py  fix_list_imports.py  gen_page_i18n.py  patch_form_instructions.py  patch_list_instructions.py  run_teste_md_e2e.py  seed.py  seed_demo_data.py  setup_site_env.ps1  split_alembic_supabase.py
site/: .env.example  Dockerfile  README.md  docker-compose.yml
supabase/: config.toml
tests/: conftest.py  test_api_keys.py  test_automacoes.py  test_cadastros.py  test_cliente_documentos.py  test_comercial.py  test_condutor.py  test_dashboard.py  test_dashboard_filial_filter.py  test_documentos.py  test_entity_impact.py  test_filial_address.py  test_financeiro.py  test_fiscal.py  test_form_combobox_api.py  test_form_fase5.py  test_form_instructions.py  test_form_polish.py  test_form_repeater.py  test_foundation_hardening.py  test_frota.py  test_health.py  test_ibge.py  test_identity_2fa.py  test_identity_config.py  test_integracoes.py  test_integracoes_fiscal_wire.py  test_intermediacao.py  test_locacoes.py  test_manutencao.py  test_mvp_sectors.py  test_navigation.py  test_notificacoes.py  test_rbac.py  (+15 more)
(+595 files in other folders)
